# kafka-temperature-monitoring

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
consumer/: consumer.py  requirements.txt
database/: freeze.sql
producer/: producer.py
