[tool.poetry]
name = "kafka-market-project"
version = "0.1.0"
description = ""
authors = ["Lorenzo Uriel <lorenzouriel394@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
kafka-python = "^2.0.2"
six = "^1.16.0"
confluent-kafka = "^2.5.0"
python-dotenv = "^1.0.1"
faker = "^33.0.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
streamlit = "^1.40.1"
plotly = "^5.24.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
